--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Eduardo Hipólito — UX / Marketing / Performance</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
-  <style>
+  <style><script>
     :root {
       --bg: #0b0c10;
       --surface: #111218;
@@ -197,6 +197,7 @@
       .job { grid-template-columns: 1fr; }
       footer { grid-template-columns: 1fr; }
     }
+</script>
   </style>
 
 </head>
@@ -289,3 +290,4 @@
 
 </body>
 </html>
+
