--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="pt-BR">
 <head>
+  <link rel="stylesheet" href="css/style.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eduardo Hipólito — UX / Marketing / Performance</title>
@@ -290,4 +291,5 @@
 
 </body>
 </html>
+
 
